syntax = "proto3";
package KFMsg;

enum FrameProtocol
{
	s2s_temp = 0;
	S2S_REGISTER_TO_SERVER_REQ = 10001;					// 请求注册
	S2S_REGISTER_TO_SERVER_ACK = 10002;					// 回馈注册
	S2S_TELL_REGISTER_TO_SERVER = 10003;				// 通知注册
	S2S_TELL_UNREGISTER_FROM_SERVER = 10004;			// 通知取消注册

	S2S_REGISTER_ROUTE_ZONE_REQ = 10011;				// 注册区信息
	S2S_REGISTER_ROUTE_PROXY_REQ = 10012;				// 注册区信息
	S2S_TRANSMIT_ROUTE_ZONE_MESSAGE_REQ = 10013;		// 消息转发到RouteProxy
	S2S_TRANSMIT_ROUTE_ZONE_MESSAGE_ACK = 10014;		// 消息转发到RouteProxy
	S2S_TRANSMIT_ROUTE_PROXY_MESSAGE_REQ = 10015;		// 消息转发到RouteShard
	S2S_TRANSMIT_ROUTE_PROXY_MESSAGE_ACK = 10016;		// 消息转发到RouteShard

	S2S_LOG_REQ = 10021;								// 记录日志到日志服务器
	S2S_UPDATE_ONLINE_TO_DIR_REQ = 10022;				// 更新登录数量到目录服务器
	S2S_REMOVE_ONLINE_TO_DIR_REQ = 10023;				// 删除登录数据
 }

////////////////////////////////////////////////////////////////////////////////
message ListenData
{
	uint64 appid = 1;
	bytes appname = 2;
	bytes apptype = 3;
	bytes ip = 4;
	uint32 port = 5;	
	uint32 zoneid = 6;	
}

////////////////////////////////////////////////////////////////////////////////
// 注册到服务器请求
// S2S_REGISTER_TO_SERVER_REQ
message RegisterToServerReq
{
	ListenData listen = 1;
}

// 注册到服务器返回
// S2S_REGISTER_TO_SERVER_ACK
message RegisterToServerAck
{
	uint64 appid = 1;
	bytes appname = 2;
	bytes apptype = 3;
}

// S2S_TELL_REGISTER_TO_SERVER
message TellRegisterToServer
{
	bytes servername = 1;
	uint32 serverzoneid = 2;

	ListenData listen = 3;
}

// S2S_TELL_UNREGISTER_FROM_SERVER
message TellUnRegisterFromServer
{
	bytes servername = 1;
	uint32 serverzoneid = 2;

	uint64 appid = 3;
	bytes appname = 4;
	bytes apptype = 5;
	uint32 zoneid = 6;	
}
////////////////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////////
message PBRouteZone
{
	uint32 zoneid = 1;
	uint64 serverid = 2;
}

// S2S_REGISTER_ROUTE_ZONE_REQ
message S2SRegisterRouteZoneReq
{
	PBRouteZone zonedata = 1;
}

// S2S_REGISTER_ROUTE_PROXY_REQ
message S2SRegisterRouteProxyReq
{
	repeated PBRouteZone zonedata = 1;
}

message PBTransmitRouteMessage
{
	uint64 serverid = 2;
	uint64 playerid = 3;
	uint32 msgid = 4;
	bytes msgdata = 5;
}

// S2S_TRANSMIT_ROUTE_ZONE_MESSAGE_REQ
message S2STransmitRouteZoneMessageReq
{
	PBTransmitRouteMessage transmitdata = 1;
}

// S2S_TRANSMIT_ROUTE_ZONE_MESSAGE_ACK
message S2STransmitRouteZoneMessageAck
{
	PBTransmitRouteMessage transmitdata = 1;
}

// S2S_TRANSMIT_ROUTE_PROXY_MESSAGE_REQ
message S2STransmitRouteProxyMessageReq
{
	PBTransmitRouteMessage transmitdata = 1;
}

// S2S_TRANSMIT_ROUTE_PROXY_MESSAGE_ACK
message S2STransmitRouteProxyMessageAck
{
	PBTransmitRouteMessage transmitdata = 1;
}
//////////////////////////////////////////////////////////////////////////////////
// S2S_LOG_REQ
message S2SLogReq
{
	uint32 log_level	= 1;
	uint32 zone_id		= 2;
	bytes app_name		= 3;
	bytes app_type		= 4;
	bytes app_id		= 5;
	bytes log_info		= 6;
}


// S2S_UPDATE_ONLINE_TO_DIR_REQ
message S2SUpdateOnlineToDirReq
{
	uint32 zoneid = 1;			// 小区id
	bytes zonename = 2;		// 小区名字
	uint32 zonechannel = 3;	// 小区类型
	uint64 appid = 4;			// 服务器id
	bytes ip = 5;				// ip
	uint32 port = 6;			// port
	uint32 onlinecount = 7;	// 当前在线人数
}

// S2S_REMOVE_ONLINE_TO_DIR_REQ
message S2SRemoveOnlineToDirReq
{
	uint64 appid = 1;			// 服务器id
}